<resources>
    <string name="app_name">LaundryMan</string>
    <string name="title_home">Requests</string>
    <string name="title_searchuser">User</string>
    <string name="title_laundaryreceived">Received</string>
    <string name="title_pricelist">Price List</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_settings">Options</string>
    <string name="student_name">Name</string>
    <string name="student_room_no">Room No.</string>
    <string name="noreq">No Requests</string>
    <string name="write_feedback">Write your feedback here..</string>
    <string name="add">Add</string>
    <string name="particular">Particular</string>
    <string name="unit">Unit (Eg:Per Pair)</string>
    <string name="rate">Rate (in Rs)</string>
    <string name="add_particular">Add Particular</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_particular">Edit Particular</string>
    <string name="sharedpref">Sharedp</string>
    <string name="search_user">User</string>
    <string name="view_profile">View Profile</string>
    <string name="add_laundry">Add Laundry</string>
    <string name="name">Name:</string>
    <string name="vasu_choudhary">Vasu Choudhary</string>
    <string name="_3rd">3rd</string>
    <string name="_900">900</string>
    <string name="btech">BTech</string>
    <string name="_2143533">2143533</string>
    <string name="_320">320</string>
    <string name="room_no">Room No:</string>
    <string name="card_no">Card No:</string>
    <string name="balance">Balance(in Rs):</string>
    <string name="branch">Branch:</string>
    <string name="year">Year:</string>
    <string name="calculate">Calculate</string>
    <string name="amount_in_rs">Amount(in Rs):</string>
    <string name="quantity">Quantity:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="update">Update</string>
    <string name="options">Options</string>
    <string name="laundry_man">Laundry Man</string>
    <string name="user">User</string>
    <string name="detail">Detail</string>
    <string name="laundry_returned">Laundry Returned</string>
    <string name="edit_laundry">Edit Laundry</string>
    <string name="delete_laundry">Delete Laundry</string>
    <string name="download">Download</string>
    <string name="feedback">Feedback</string>
    <string name="monthly_report">Monthly Report</string>
    <string name="open_report">Open Report</string>
    <string name="add_dry_cleaning">Add Dry Cleaning</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>